added dark background and delete book on edit page

--- a/src/app/components/add-book/add-book.component.html
+++ b/src/app/components/add-book/add-book.component.html
@@ -48,7 +48,7 @@
 
         <div class="text-center mt-2">
           <button type="submit" class="btn btn-primary m-1" [disabled]="validateBook()">Save Changes</button>
-          <button type="button" (click)="onCancel()" class="btn btn-secondary">Cancel</button>
+          <button type="button" (click)="onCancel()" class="btn btn-dark">Cancel</button>
         </div>
       </form>
     </div>
