--- a/src/app/components/edit-book/edit-book.component.html
+++ b/src/app/components/edit-book/edit-book.component.html
@@ -48,7 +48,8 @@
 
         <div class="text-center mt-2">
           <button type="submit" class="btn btn-primary m-1">Save Changes</button>
-          <button type="button" (click)="onCancel()" class="btn btn-secondary">Cancel</button>
+          <button type="button" (click)="onCancel()" class="btn btn-dark">Cancel</button>
+          <button type="button" (click)="onDelete()" class="btn btn-danger m-1">Delete</button>
         </div>
       </form>
     </div>
