--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
   <div class="container-fluid">
-    <a class="navbar-brand" >Library App</a>
-<!--    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--      <span class="navbar-toggler-icon"></span>-->
-<!--    </button>-->
+    <div class="navbar-brand text-center">
+      <img src="/8832880.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <h5>Library App</h5>
+    </div>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -12,16 +12,14 @@
         <li class="nav-item">
           <a class="nav-link active" routerLink="books/add">Add book</a>
         </li>
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link active" href="#">Pricing</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-<!--        </li>-->
+        <!--        <li class="nav-item">-->
+        <!--          <a class="nav-link active" href="#">Pricing</a>-->
+        <!--        </li>-->
       </ul>
     </div>
     <form class="d-flex" (ngSubmit)="onSearch()">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchTerm" name="searchTerm">>
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchTerm"
+             name="searchTerm">>
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
   </div>
